new icons for the listmodel on the charts page (old ones were too specific and confusing). fixed a bug where charted items were added multiple times to the database. working towards a goal where all procedure codes can be added to the treatment plan via all methods, and saved correctly.

--- a/src/lib_openmolar/client/resources/resources.qrc
+++ b/src/lib_openmolar/client/resources/resources.qrc
@@ -25,7 +25,7 @@
     <file>icons/filling.png</file>
     <file>icons/crown.png</file>
     <file>icons/root.png</file>
-
+    <file>icons/fissure_sealant.png</file>
     <file>teeth/ur8.svg</file>
     <file>teeth/ur7.svg</file>
     <file>teeth/ur6.svg</file>
