--- a/src/lib_openmolar/common/resources/resources.qrc
+++ b/src/lib_openmolar/common/resources/resources.qrc
@@ -1,8 +1,7 @@
 <!DOCTYPE RCC>
    <RCC version="1.0">
       <qresource>
-         <file>proc_codes/om2_codes.txt</file>
-         <file>proc_codes/om2_code_regex.txt</file>
+         <file>proc_codes/om2_codes.xml</file>
       </qresource>
    </RCC>
 
