notes work. A notes_widget with 3 modes of operation (CLINICAL, RECEPTION and COMBINED) to be used in the client. A model to show the data as per users instructions. CSS to help display the html.

--- a/src/lib_openmolar/client/resources/resources.qrc
+++ b/src/lib_openmolar/client/resources/resources.qrc
@@ -46,6 +46,8 @@
     <file>implants/upper_implant.svg</file>
     <file>implants/lower_implant.svg</file>
     
+    <file>css/notes.css</file>
+    
 </qresource>
 </RCC>
 
