import static work

--- a/src/lib_openmolar/client/resources/css/details.css
+++ b/src/lib_openmolar/client/resources/css/details.css
@@ -20,11 +20,10 @@ written by Neil Wallace < rowinggolfer@gmail.com >
 
 --*/
 
-body{background-color:#eeeeee;}
+body{background-color:#ffffff;}
 
 /*-- DIVS --*/
 div.center{text-align:center;}
-div.new_note_link{text-align:right;}
 
 /* Headings */
 h1{
@@ -32,9 +31,6 @@ h1{
     color:#4322a8
     }
     
-/*-- LINKS --*/
-a.editable_note{background-color:#ffffff;}
-
 /*-- images --*/
 img.pencil{
     height:20px;
@@ -42,47 +38,9 @@ img.pencil{
     float:right; 
     margin: 2px;}
 
-img.author{
+img.clinician{
     height:40px;
     width:40px;
     float:left; 
     margin: 4px;}
-
-img.co_author{
-    height:26px;
-    width:26px;
-    float:right; 
-    margin: 4px;}
-    
-/*-- TABLE -- */
-table{
-    width:100%;
-    border:3px solid #aaaaaa;
-    border-collapse:collapse;
-    }
-
-th
-{
-    background-color: #000000;
-    color:#ffffff;
-    border:3px solid #aaaaaa;
-    border-collapse:collapse;
-}
-
-td{
-    border:2px solid #aaaaaa;
-    border-collapse:collapse;
-    }
-
-tr.clinical{background-color:#eeeeee;}
-tr.clerical{background-color:#dddddd;}
-
-tr.editable_clinical{background-color:#ffeeee;}
-tr.editable_clerical{background-color:#ffdddd;}
-
-td.date{}
-
-td.author{width:100px;}
-
-td.note{text-align:left;}
 
