major code reworking, created a new class 'PostgresMainWindow', and altered the way applications connect to postgres. WILL break stuff... espescially packaging.

--- a/src/lib_openmolar/common/resources/resources.qrc
+++ b/src/lib_openmolar/common/resources/resources.qrc
@@ -1,6 +1,9 @@
 <!DOCTYPE RCC>
    <RCC version="1.0">
       <qresource>
+         <file>icons/postgresql_elephant.svg</file> 
+         <file>icons/no_postgresql_elephant.svg</file>
+         
          <file>proc_codes/om2_codes.xml</file>
       </qresource>
    </RCC>
