--- a/src/lib_openmolar/common/resources/resources.qrc
+++ b/src/lib_openmolar/common/resources/resources.qrc
@@ -3,6 +3,8 @@
       <qresource>
          <file>icons/postgresql_elephant.svg</file> 
          <file>icons/no_postgresql_elephant.svg</file>
+         <file>icons/plugins.png</file>
+         <file>icons/eraser.png</file>
          
          <file>proc_codes/om2_codes.xml</file>
       </qresource>
