refactoring of server.

--- a/src/lib_openmolar/client/resources/css/details.css
+++ b/src/lib_openmolar/client/resources/css/details.css
@@ -1,4 +1,4 @@
-/*-- stylesheet for openmolar2 notes 
+/*-- stylesheet for openmolar2 details browser (left hand side of client) 
 written by Neil Wallace < rowinggolfer@gmail.com >
 
 ################################################################################
@@ -10,7 +10,7 @@ written by Neil Wallace < rowinggolfer@gmail.com >
 #                                                                              #
 #  IF YOU WOULD LIKE TO USE A CUSTOM CSS FILE                                  #
 #  PLEASE PLACE IT IN THIS FOLDER AND NAME IT                                  #
-#  "custom_notes.css"                                                          #
+#  "custom_details.css"                                                        #
 #                                                                              #
 #  THE PRESENCE OF SUCH A FILE WILL MEAN THIS FILE IS IGNORED BY               #
 #  THE NOTES BROWSER.                                                          #
