--- a/src/lib_openmolar/common/resources/resources.qrc
+++ b/src/lib_openmolar/common/resources/resources.qrc
@@ -10,6 +10,7 @@
          <file>images/header_fade.png</file>
          <file>images/footer_fade.png</file>
          <file>images/om_db.png</file>
+	 <file>images/log.png</file>
 
          <file>proc_codes/om2_codes.xml</file>
 
