--- a/src/lib_openmolar/common/resources/css/proxy.css
+++ b/src/lib_openmolar/common/resources/css/proxy.css
@@ -52,6 +52,10 @@ h3.header {
     padding-bottom:0px;
     }
 
+div.main {
+    text-align:center;
+}
+
 
 div.footer {
     background: url(qrc:images/footer_fade.png) repeat-x;
@@ -90,7 +94,30 @@ padding-left: 30px;
 
 a {color:#2f2159;}
 
+/*--
 a.management_link {
-    left:60px;
-    position:relative;
+    background: url(qrc:images/log.png) left no-repeat;
 }
+--*/
+
+table {
+    width:100%;
+}
+table, td, th {
+    text-align:center;
+    border:4px solid #888888;
+    border-collapse:collapse;
+}
+
+th {
+background-color:#888888;
+color:white;
+}
+
+tr.odd{
+background-color:#dddddd;
+}
+tr.even{
+background-color:#eeeeee;
+}
+
