--- a/src/lib_openmolar/common/resources/css/proxy.css
+++ b/src/lib_openmolar/common/resources/css/proxy.css
@@ -103,9 +103,9 @@ a.management_link {
 --*/
 
 #postgres_table {
-    width:60%;
-    margin-left:20%; 
-    margin-right:20%;
+    width:80%;
+    margin-left:10%; 
+    margin-right:10%;
 }
 
 #database_table {
@@ -116,6 +116,15 @@ table, td, th {
     text-align:center;
     border:4px solid #888888;
     border-collapse:collapse;
+}
+
+td.list {
+    text-align:left;
+}
+
+table.sessions {
+    text-align:left;
+    border:0px;
 }
 
 th {
@@ -131,7 +140,7 @@ background-color:#eeeeee;
 }
 
 h3, h4, h5, h6 {
-padding-top:0px;
-padding-bottom:0px;
+margin-top:10px;
+margin-bottom:2px;
 }
 
